# src/modules/setup/setup.controller.ts
@@ -1,14 +1,14 @@
 import { Body, Controller, Post } from '@nestjs/common';
 import { UsersService } from '../users/users.service';
 import { SetupService } from './setup.service';
-import { InitDashboardDto } from './dto/init-dashboard.dto';
+import { InitDashboardReqDto } from './dto/init-dashboard.req.dto';
 
 @Controller('setup')
 export class SetupController {
   constructor(private setupService: SetupService) {}
 
   @Post('init')
-  async initializeSetup(@Body() dto: InitDashboardDto) {
+  async initializeSetup(@Body() dto: InitDashboardReqDto) {
     await this.setupService.initializeSetup(dto);
   }
 }
