# src/modules/status/dto/status.res.dto.ts
@@ -2,5 +2,6 @@ import { UserEntity } from "src/modules/users/user.entity";
 
 export class StatusResponseDto {
     setupCompleted: boolean;
+    serverName?: string;
     user?: UserEntity;
 }
