# src/modules/users/dto/changepassword.req.dto.ts
@@ -1,0 +1,14 @@
+import { IsString, Matches, MaxLength, MinLength } from 'class-validator';
+
+export class ChangePasswordReqDto {
+  currentPassword: string;
+
+  @IsString()
+  @MinLength(8)
+  @MaxLength(128)
+  @Matches(/^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[\W_]).+$/, {
+    message:
+      'Password too weak. It must contain at least one uppercase letter, one lowercase letter, one number, and one special character.',
+  })
+  newPassword: string;
+}
